<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    tools:context=".MainMenuFragment">

    <LinearLayout
        android:id="@+id/dialogueChooseHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/user_quiz"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_background"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/left_pick_icon"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="5dp"
                app:srcCompat="@drawable/user_questions"
                app:tint="@color/quiz_selector_colour" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/left_pick_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/start_quiz"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/quiz_selector_colour"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/pre_made_quiz"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_background"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/right_pick_icon"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="5dp"
                app:srcCompat="@drawable/handmade_questions"
                app:tint="@color/quiz_selector_colour" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/right_pick_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/start_premade_quiz"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/quiz_selector_colour"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/create_question_set"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_background"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/question_set_pick_icon"
                android:layout_width="75dp"
                android:layout_height="105dp"
                android:layout_marginTop="5dp"
                app:srcCompat="@drawable/create_quiz"
                app:tint="@color/quiz_selector_colour" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/question_set_pick_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/create_quiz"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/quiz_selector_colour"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>